@@ -392,7 +392,7 @@ public abstract class AbstractAlgorithmRunner
             DataModelList dataModelList = this.dataWrapper.getDataModelList();
 
             if (dataModelList.size() == 1) {
-                return dataModelList.get(0);
+                return dataModelList.getFirst();
             } else {
                 return dataModelList;
             }
