@@ -129,6 +129,7 @@ public final class GraphSearchUtils {
      * @param test      a {@link edu.cmu.tetrad.search.IndependenceTest} object
      * @param knowledge a {@link edu.cmu.tetrad.data.Knowledge} object
      * @param graph     a {@link edu.cmu.tetrad.graph.Graph} object
+     * @throws java.lang.InterruptedException if any.
      */
     public static void pcdOrientC(IndependenceTest test, Knowledge knowledge, Graph graph) throws InterruptedException {
         TetradLogger.getInstance().log("Starting Collider Orientation:");
@@ -276,9 +277,9 @@ public final class GraphSearchUtils {
                                  && !knowledge.isForbidden(((Object) c).toString(), ((Object) b).toString());
                     }
                     if (result) {
-                        if (verbose) {
-                            System.out.println("Collider orientation <" + a + ", " + b + ", " + c + "> sepset = " + sepset);
-                        }
+//                        if (verbose) {
+//                            System.out.println("Collider orientation <" + a + ", " + b + ", " + c + "> sepset = " + sepset);
+//                        }
 
                         if (enforceCpdag) {
                             if (graph.getEndpoint(b, a) == Endpoint.ARROW || graph.getEndpoint(b, c) == Endpoint.ARROW) {
@@ -403,7 +404,6 @@ public final class GraphSearchUtils {
      * @return A LegalPagRet object indicating whether the PAG is legal or not, along with a reason if it is not legal.
      */
     public static LegalPagRet isLegalPag(Graph pag, Set<Node> selection) {
-
         for (Node n : pag.getNodes()) {
             if (n.getNodeType() != NodeType.MEASURED) {
                 return new LegalPagRet(false,
@@ -412,7 +412,6 @@ public final class GraphSearchUtils {
         }
 
         Graph mag = GraphTransforms.zhangMagFromPag(pag);
-
         LegalMagRet legalMag = isLegalMag(mag, selection);
 
         if (!legalMag.isLegalMag()) {
@@ -426,30 +425,25 @@ public final class GraphSearchUtils {
 
             for (Edge e : pag.getEdges()) {
                 Edge e2 = pag2.getEdge(e.getNode1(), e.getNode2());
-
                 if (!e.equals(e2)) {
-                    edgeMismatch = "For example, the original PAG has edge " + e
-                                   + " whereas the reconstituted graph has edge " + e2;
+                    edgeMismatch = "For example, the original PAG has edge " + e +
+                                   " whereas the reconstituted graph has edge " + e2;
+                    break;
                 }
             }
 
-            String reason;
+            String reason = legalMag.isLegalMag()
+                    ? "The MAG implied by this graph was a legal MAG, but one cannot recover the original graph " +
+                      "by finding the PAG of an implied MAG — this graph may lie between a MAG and a PAG"
+                    : "The MAG implied by this graph was not legal, and one cannot recover the original graph from its implied PAG";
 
-            if (legalMag.isLegalMag()) {
-                reason = "The MAG implied by this graph was a legal MAG, but still one cannot recover the original graph " +
-                         "by finding the PAG of an implied MAG, so this is between a MAG and PAG";
-
-            } else {
-                reason = "The MAG implied by this graph was not legal MAG, but in any case one cannot recover " +
-                         "the original graph by finding the PAG of an implied MAG, so this is could be between " +
-                         "a MAG and PAG";
+            if (!edgeMismatch.isEmpty()) {
+                reason += ". " + edgeMismatch;
             }
 
             if (!edgeMismatch.isEmpty()) {
-                reason = reason + ". " + edgeMismatch;
+                return new LegalPagRet(false, reason);
             }
-
-            return new LegalPagRet(false, reason);
         }
 
         return new LegalPagRet(true, "This is a legal PAG");
@@ -464,39 +458,33 @@ public final class GraphSearchUtils {
      */
     public static LegalMagRet isLegalMag(Graph mag, Set<Node> selection) {
         for (Node n : mag.getNodes()) {
-            if (n.getNodeType() == NodeType.LATENT)
-                return new LegalMagRet(false,
-                        "Node " + n + " is not measured");
+            if (n.getNodeType() == NodeType.LATENT) {
+                return new LegalMagRet(false, "Node " + n + " is not measured");
+            }
         }
 
         List<Node> nodes = mag.getNodes();
 
-        for (int i = 0; i < nodes.size(); i++) {
-            for (int j = i + 1; j < nodes.size(); j++) {
-                Node x = nodes.get(i);
-                Node y = nodes.get(j);
+        for (Edge edge : mag.getEdges()) {
+            Node x = edge.getNode1();
+            Node y = edge.getNode2();
 
-                if (!mag.isAdjacentTo(x, y)) continue;
+            if (!mag.isAdjacentTo(x, y)) continue;
 
-                if (mag.getEdges(x, y).size() > 1) {
-                    return new LegalMagRet(false,
-                            "There is more than one edge between " + x + " and " + y);
-                }
+            if (mag.getEdges(x, y).size() > 1) {
+                return new LegalMagRet(false, "There is more than one edge between " + x + " and " + y);
+            }
 
-                Edge e = mag.getEdge(x, y);
-
-                if (!(Edges.isDirectedEdge(e) || Edges.isBidirectedEdge(e) || Edges.isUndirectedEdge(e))) {
-                    return new LegalMagRet(false,
-                            "Edge " + e + " should be dir" +
-                            "ected, bidirected, or undirected.");
-                }
+            if (!(Edges.isDirectedEdge(edge) || Edges.isBidirectedEdge(edge) || Edges.isUndirectedEdge(edge))) {
+                return new LegalMagRet(false, "Edge " + edge + " should be directed, bidirected, or undirected.");
             }
         }
 
         for (Node n : mag.getNodes()) {
-            if (mag.paths().existsDirectedPath(n, n))
+            if (mag.paths().existsDirectedPath(n, n)) {
                 return new LegalMagRet(false,
-                        "Acyclicity violated: There is a directed cyclic path from from " + n + " to itself");
+                        "Acyclicity violated: There is a directed cyclic path from " + n + " to itself");
+            }
         }
 
         for (Edge e : mag.getEdges()) {
@@ -504,21 +492,23 @@ public final class GraphSearchUtils {
             Node y = e.getNode2();
 
             if (Edges.isBidirectedEdge(e)) {
-                if (mag.paths().existsDirectedPath(x, y)) {
-                    List<Node> path = mag.paths().directedPaths(x, y, 100).get(0);
+                List<List<Node>> forwardPaths = mag.paths().directedPaths(x, y, 1);
+                if (!forwardPaths.isEmpty()) {
                     return new LegalMagRet(false,
-                            "Bidirected edge semantics is violated: there is a directed path for " + e + " from " + x + " to " + y
-                            + ". This is \"almost cyclic\"; for <-> edges there should not be a path from either endpoint to the other. "
-                            + "An example path is " + GraphUtils.pathString(mag, path, false));
-                } else if (mag.paths().existsDirectedPath(y, x)) {
-                    List<Node> path = mag.paths().directedPaths(y, x, 100).get(0);
+                            "Bidirected edge semantics is violated: Directed path exists from " + x + " to " + y +
+                            ". An example path is " + GraphUtils.pathString(mag, forwardPaths.getFirst(), false));
+                }
+
+                List<List<Node>> backwardPaths = mag.paths().directedPaths(y, x, 1);
+                if (!backwardPaths.isEmpty()) {
                     return new LegalMagRet(false,
-                            "Bidirected edge semantics is violated: There is an a directed path for " + e + " from " + y + " to " + x +
-                            ". This is \"almost cyclic\"; for <-> edges there should not be a path from either endpoint to the other. "
-                            + "An example path is " + GraphUtils.pathString(mag, path, false));
+                            "Bidirected edge semantics is violated: Directed path exists from " + y + " to " + x +
+                            ". An example path is " + GraphUtils.pathString(mag, backwardPaths.getFirst(), false));
                 }
             }
         }
+
+        Set<Node> sel = (selection == null) ? Collections.emptySet() : new HashSet<>(selection);
 
         for (int i = 0; i < nodes.size(); i++) {
             for (int j = i + 1; j < nodes.size(); j++) {
@@ -526,35 +516,32 @@ public final class GraphSearchUtils {
                 Node y = nodes.get(j);
 
                 if (!mag.isAdjacentTo(x, y)) {
-                    if (mag.paths().existsInducingPath(x, y, new HashSet<>(selection)))
+                    if (mag.paths().existsInducingPath(x, y, sel)) {
                         return new LegalMagRet(false,
-                                "This is not maximal; there is an inducing path between non-adjacent " + x + " and " + y);
+                                "Not maximal: Inducing path exists between non-adjacent " + x + " and " + y);
+                    }
                 }
             }
         }
 
-        for (int i = 0; i < nodes.size(); i++) {
-            for (int j = i + 1; j < nodes.size(); j++) {
-                Node x = nodes.get(i);
-                Node y = nodes.get(j);
+        for (Edge edge : mag.getEdges()) {
+            Node x = edge.getNode1();
+            Node y = edge.getNode2();
 
-                if (!mag.isAdjacentTo(x, y)) continue;
-
-                Edge e = mag.getEdge(x, y);
-
-                if (Edges.isUndirectedEdge(e)) {
-                    for (Node z : mag.getAdjacentNodes(x)) {
-                        if (mag.isParentOf(z, x) || Edges.isBidirectedEdge(mag.getEdge(z, x))) {
-                            return new LegalMagRet(false,
-                                    "For undirected edge " + e + ", " + z + " should not be a parent or a spouse of " + x);
-                        }
+            if (Edges.isUndirectedEdge(edge)) {
+                for (Node z : mag.getAdjacentNodes(x)) {
+                    Edge zx = mag.getEdge(z, x);
+                    if (mag.isParentOf(z, x) || Edges.isBidirectedEdge(zx)) {
+                        return new LegalMagRet(false,
+                                "Undirected edge constraint violated: " + z + " is a parent or spouse of " + x);
                     }
+                }
 
-                    for (Node z : mag.getAdjacentNodes(y)) {
-                        if (mag.isParentOf(z, y) || Edges.isBidirectedEdge(mag.getEdge(z, y))) {
-                            return new LegalMagRet(false,
-                                    "For undirected edge " + e + ", " + z + " should not be a parent or a spouse of " + y);
-                        }
+                for (Node z : mag.getAdjacentNodes(y)) {
+                    Edge zy = mag.getEdge(z, y);
+                    if (mag.isParentOf(z, y) || Edges.isBidirectedEdge(zy)) {
+                        return new LegalMagRet(false,
+                                "Undirected edge constraint violated: " + z + " is a parent or spouse of " + y);
                     }
                 }
             }
@@ -562,6 +549,175 @@ public final class GraphSearchUtils {
 
         return new LegalMagRet(true, "This is a legal MAG");
     }
+
+
+//    /**
+//     * Checks if the provided Directed Acyclic Graph (PAG) is a legal PAG.
+//     *
+//     * @param pag       The Directed Acyclic Graph (PAG) to be checked
+//     * @param selection The set of nodes to be conditioned on
+//     * @return A LegalPagRet object indicating whether the PAG is legal or not, along with a reason if it is not legal.
+//     */
+//    public static LegalPagRet isLegalPag(Graph pag, Set<Node> selection) {
+//
+//        for (Node n : pag.getNodes()) {
+//            if (n.getNodeType() != NodeType.MEASURED) {
+//                return new LegalPagRet(false,
+//                        "Node " + n + " is not measured");
+//            }
+//        }
+//
+//        Graph mag = GraphTransforms.zhangMagFromPag(pag);
+//
+//        LegalMagRet legalMag = isLegalMag(mag, selection);
+//
+//        if (!legalMag.isLegalMag()) {
+//            return new LegalPagRet(false, legalMag.getReason() + " in a MAG implied by this graph");
+//        }
+//
+//        Graph pag2 = GraphTransforms.dagToPag(mag);
+//
+//        if (!pag.equals(pag2)) {
+//            String edgeMismatch = "";
+//
+//            for (Edge e : pag.getEdges()) {
+//                Edge e2 = pag2.getEdge(e.getNode1(), e.getNode2());
+//
+//                if (!e.equals(e2)) {
+//                    edgeMismatch = "For example, the original PAG has edge " + e
+//                                   + " whereas the reconstituted graph has edge " + e2;
+//                }
+//            }
+//
+//            String reason;
+//
+//            if (legalMag.isLegalMag()) {
+//                reason = "The MAG implied by this graph was a legal MAG, but still one cannot recover the original graph " +
+//                         "by finding the PAG of an implied MAG, so this is between a MAG and PAG";
+//
+//            } else {
+//                reason = "The MAG implied by this graph was not legal MAG, but in any case one cannot recover " +
+//                         "the original graph by finding the PAG of an implied MAG, so this is could be between " +
+//                         "a MAG and PAG";
+//            }
+//
+//            if (!edgeMismatch.isEmpty()) {
+//                reason = reason + ". " + edgeMismatch;
+//            }
+//
+//            return new LegalPagRet(false, reason);
+//        }
+//
+//        return new LegalPagRet(true, "This is a legal PAG");
+//    }
+
+//    /**
+//     * Determines whether the given graph is a legal Mixed Ancestral Graph (MAG).
+//     *
+//     * @param mag       the graph to be checked
+//     * @param selection the set of nodes to be conditioned on
+//     * @return a LegalMagRet object indicating whether the graph is legal and providing an error message if it is not
+//     */
+//    public static LegalMagRet isLegalMag(Graph mag, Set<Node> selection) {
+//        for (Node n : mag.getNodes()) {
+//            if (n.getNodeType() == NodeType.LATENT)
+//                return new LegalMagRet(false,
+//                        "Node " + n + " is not measured");
+//        }
+//
+//        List<Node> nodes = mag.getNodes();
+//
+//        for (int i = 0; i < nodes.size(); i++) {
+//            for (int j = i + 1; j < nodes.size(); j++) {
+//                Node x = nodes.get(i);
+//                Node y = nodes.get(j);
+//
+//                if (!mag.isAdjacentTo(x, y)) continue;
+//
+//                if (mag.getEdges(x, y).size() > 1) {
+//                    return new LegalMagRet(false,
+//                            "There is more than one edge between " + x + " and " + y);
+//                }
+//
+//                Edge e = mag.getEdge(x, y);
+//
+//                if (!(Edges.isDirectedEdge(e) || Edges.isBidirectedEdge(e) || Edges.isUndirectedEdge(e))) {
+//                    return new LegalMagRet(false,
+//                            "Edge " + e + " should be dir" +
+//                            "ected, bidirected, or undirected.");
+//                }
+//            }
+//        }
+//
+//        for (Node n : mag.getNodes()) {
+//            if (mag.paths().existsDirectedPath(n, n))
+//                return new LegalMagRet(false,
+//                        "Acyclicity violated: There is a directed cyclic path from from " + n + " to itself");
+//        }
+//
+//        for (Edge e : mag.getEdges()) {
+//            Node x = e.getNode1();
+//            Node y = e.getNode2();
+//
+//            if (Edges.isBidirectedEdge(e)) {
+//                if (mag.paths().existsDirectedPath(x, y)) {
+//                    List<Node> path = mag.paths().directedPaths(x, y, 100).get(0);
+//                    return new LegalMagRet(false,
+//                            "Bidirected edge semantics is violated: there is a directed path for " + e + " from " + x + " to " + y
+//                            + ". This is \"almost cyclic\"; for <-> edges there should not be a path from either endpoint to the other. "
+//                            + "An example path is " + GraphUtils.pathString(mag, path, false));
+//                } else if (mag.paths().existsDirectedPath(y, x)) {
+//                    List<Node> path = mag.paths().directedPaths(y, x, 100).get(0);
+//                    return new LegalMagRet(false,
+//                            "Bidirected edge semantics is violated: There is an a directed path for " + e + " from " + y + " to " + x +
+//                            ". This is \"almost cyclic\"; for <-> edges there should not be a path from either endpoint to the other. "
+//                            + "An example path is " + GraphUtils.pathString(mag, path, false));
+//                }
+//            }
+//        }
+//
+//        for (int i = 0; i < nodes.size(); i++) {
+//            for (int j = i + 1; j < nodes.size(); j++) {
+//                Node x = nodes.get(i);
+//                Node y = nodes.get(j);
+//
+//                if (!mag.isAdjacentTo(x, y)) {
+//                    if (mag.paths().existsInducingPath(x, y, new HashSet<>(selection)))
+//                        return new LegalMagRet(false,
+//                                "This is not maximal; there is an inducing path between non-adjacent " + x + " and " + y);
+//                }
+//            }
+//        }
+//
+//        for (int i = 0; i < nodes.size(); i++) {
+//            for (int j = i + 1; j < nodes.size(); j++) {
+//                Node x = nodes.get(i);
+//                Node y = nodes.get(j);
+//
+//                if (!mag.isAdjacentTo(x, y)) continue;
+//
+//                Edge e = mag.getEdge(x, y);
+//
+//                if (Edges.isUndirectedEdge(e)) {
+//                    for (Node z : mag.getAdjacentNodes(x)) {
+//                        if (mag.isParentOf(z, x) || Edges.isBidirectedEdge(mag.getEdge(z, x))) {
+//                            return new LegalMagRet(false,
+//                                    "For undirected edge " + e + ", " + z + " should not be a parent or a spouse of " + x);
+//                        }
+//                    }
+//
+//                    for (Node z : mag.getAdjacentNodes(y)) {
+//                        if (mag.isParentOf(z, y) || Edges.isBidirectedEdge(mag.getEdge(z, y))) {
+//                            return new LegalMagRet(false,
+//                                    "For undirected edge " + e + ", " + z + " should not be a parent or a spouse of " + y);
+//                        }
+//                    }
+//                }
+//            }
+//        }
+//
+//        return new LegalMagRet(true, "This is a legal MAG");
+//    }
 
     /**
      * <p>arrangeByKnowledgeTiers.</p>
@@ -614,6 +770,8 @@ public final class GraphSearchUtils {
                 }
             }
         }
+
+        LayoutUtil.repositionLatents(graph);
     }
 
     /**
@@ -675,6 +833,8 @@ public final class GraphSearchUtils {
             y += ySpace;
 
         }
+
+        LayoutUtil.repositionLatents(graph);
     }
 
     /**
@@ -799,6 +959,7 @@ public final class GraphSearchUtils {
      * @param depth a int
      * @param graph a {@link edu.cmu.tetrad.graph.Graph} object
      * @return a {@link edu.cmu.tetrad.search.utils.GraphSearchUtils.CpcTripleType} object
+     * @throws java.lang.InterruptedException if any.
      */
     public static CpcTripleType getCpcTripleType(Node x, Node y, Node z,
                                                  IndependenceTest test, int depth,
@@ -931,24 +1092,36 @@ public final class GraphSearchUtils {
         return shd;
     }
 
+    // Anne Helby pointed out this number was wrong, so replacing it with a different count
+    // per edge, which is either 0 or 1 always per edge.
     private static int structuralHammingDistanceOneEdge(Edge e1, Edge e2) {
-        int error = 0;
+        // Skeleton difference
+        if (e1 == null && e2 == null) return 0;
+        if (e1 == null || e2 == null) return 1;
 
-        if (!(e1 == null && e2 == null)) {
-            if (e1 != null && e2 != null) {
-                if (!e1.equals(e2)) {
-                    error++;
-                }
-            } else if (Edges.isUndirectedEdge(Objects.requireNonNullElse(e2, e1))) {
-                error++;
-            } else {
-                error++;
-                error++;
-            }
-        }
-
-        return error;
+        // Both edges present – only orientation can differ now
+        return e1.equals(e2) ? 0 : 1;
     }
+
+
+//    private static int structuralHammingDistanceOneEdge(Edge e1, Edge e2) {
+//        int error = 0;
+//
+//        if (!(e1 == null && e2 == null)) {
+//            if (e1 != null && e2 != null) {
+//                if (!e1.equals(e2)) {
+//                    error++;
+//                }
+//            } else if (Edges.isUndirectedEdge(Objects.requireNonNullElse(e2, e1))) {
+//                error++;
+//            } else {
+//                error++;
+//                error++;
+//            }
+//        }
+//
+//        return error;
+//    }
 
     /**
      * Just counts arrowhead errors--for cyclic edges counts an arrowhead at each node.
